--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <application
-        android:name=".steps.StepApp"
+        android:name=".steps.serivces.StepApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -33,7 +33,7 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".steps.StepWidgetReceiver" android:exported="true">
+        <receiver android:name=".steps.serivces.StepWidgetReceiver" android:exported="true">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -42,7 +42,7 @@
                 android:resource="@xml/step_widget_info"/>
         </receiver>
 
-        <service android:name=".steps.StepForegroundService"/>
+        <service android:name=".steps.serivces.StepForegroundService"/>
 
         <receiver android:name=".BootCompletedReceiver" android:exported="true" android:enabled="true" android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
             <intent-filter>
